# insalo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  JOURNAL.md  README.md  insaloSim.py  pseudocode
data/processed/: cleaned_medtronic_data.csv
data/raw/: Milana Kumykova 26-02-2026.csv
scripts/: dataprocessor.py  neuralnetwork.py
src/cpp/subsystems/: Controller.cpp  Stepper.cpp
src/include /: Controller.h  Stepper.h
src/include /constants/: Constants.h  Units.h
